--- a/pfs-style.css
+++ b/pfs-style.css
@@ -1,22 +1,12 @@
-<?php
-require('../../../wp-blog-header.php');
-header('Content-type: text/css');
-
-echo "/* CSS generated for the Post-From-Site plugin. Defaults can be edited through settings page in Wordpress. */\n\n";
-$stylevars = Array('pfs_titlecolor','pfs_textcolor','pfs_bgcolor','pfs_bgimg');
-$pfs_options = get_option('pfs_options');
-foreach($stylevars as $var) ${$var}=$pfs_options[$var];
-?>
-
 .pfs-post-box{
-    background:<?php echo $pfs_bgcolor; ?> url('<?php echo $pfs_bgimg; ?>') no-repeat top left;
+    background:#F0F0F0 url('title-3.png') no-repeat top left;
     border:1px solid black;
     padding:10px;
     padding-top:55px;
     font-family:'Trebuchet MS',sans-serif;
     font-size:9pt;
     font-weight:normal;
-    <?php echo (''==$pfs_textcolor)?"":"color:$pfs_textcolor;\n"; ?>
+    color:black;
     text-align:center;
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
@@ -76,7 +66,7 @@ foreach($stylevars as $var) ${$var}=$pfs_options[$var];
 .pfs-post-box h4 {
     display:inline;
     font-size:130%;
-    <?php echo (''==$pfs_titlecolor)?"":"color:$pfs_titlecolor;"; ?>
+    color:;
 }
 #pfs_catchecks, #pfs_tagchecks {
     float:left;
@@ -117,4 +107,3 @@ foreach($stylevars as $var) ${$var}=$pfs_options[$var];
     font-weight:normal;
 }
 .clear {clear:both;}
-<?php echo $pfs_options['pfs_customcss']; ?>
